--- a/PokePlugin/pom.xml
+++ b/PokePlugin/pom.xml
@@ -6,16 +6,16 @@
 
     <groupId>com.alan</groupId>
     <artifactId>PokePlugin</artifactId>
-    <version>1.0.0</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
-    <name>PokePlugin</name>
-    <description>Nostalgic poke feature for Minecraft servers (1.20.x - 1.21.x)</description>
+    <name>PokeNotify</name>
+    <description>Enhanced poke notification system for Minecraft servers</description>
     <url>https://github.com/Eldrath-Dev</url>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -38,16 +38,27 @@
             <url>https://repo.purpurmc.org/snapshots</url>
         </repository>
 
-        <!-- Vault Repository -->
+        <!-- JitPack for Vault -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+
+        <!-- PlaceholderAPI Repository -->
+        <repository>
+            <id>placeholderapi</id>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+
+        <!-- CodeMC for bStats -->
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
-        <!-- Paper API (1.20.1+ for broad compatibility) -->
-        <!-- This includes Bukkit and Spigot APIs -->
+        <!-- Paper API (includes Bukkit and Spigot APIs) -->
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
@@ -55,7 +66,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Folia API (for Folia server support) -->
+        <!-- Folia API -->
         <dependency>
             <groupId>dev.folia</groupId>
             <artifactId>folia-api</artifactId>
@@ -63,7 +74,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Spigot API (explicit for Spigot-specific servers) -->
+        <!-- Spigot API (explicit) -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -71,7 +82,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Purpur API (extends Paper) -->
+        <!-- Purpur API -->
         <dependency>
             <groupId>org.purpurmc.purpur</groupId>
             <artifactId>purpur-api</artifactId>
@@ -79,12 +90,36 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Vault API for Economy -->
+        <!-- Vault API -->
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- PlaceholderAPI -->
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.11.6</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- bStats -->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- SQLite JDBC -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -102,8 +137,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -117,6 +152,23 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <relocations>
+                                <!-- Relocate bStats -->
+                                <relocation>
+                                    <pattern>org.bstats</pattern>
+                                    <shadedPattern>com.alan.pokePlugin.metrics</shadedPattern>
+                                </relocation>
+                            </relocations>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
                     </execution>
